--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,15 @@
 }
 
 html, body {
-    font-family: Arial, Helvetica, sans-serif;
-    width: 1200px;
+    color: rgb(55, 53, 47);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
+    width: 1000px;
     margin: 0 auto;
 }
 
 .header {
     width: 100%;
-    margin: 15px 0 25px 0;
+    margin: 15px 0 45px 0;
     position: relative;
 }
 
@@ -28,7 +29,7 @@ html, body {
 
 .header__title {
     display: inline-block;
-    font-size: 38px;
+    font-size: 40px;
     font-weight: bold;
     letter-spacing: .5px;
     position: relative;
@@ -44,7 +45,7 @@ html, body {
     transform: scaleY(0);
     transition: transform .1s ease-in-out;
     transform-origin: bottom;
-    background-color: rgb(230, 223, 223);
+    background-color: #e5edff;
     z-index: -1;
 }
 
@@ -55,15 +56,15 @@ html, body {
 
 .header__link {
     text-decoration: none;
-    color: black;
+    color: inherit;
 }
 
-.header__sumarize {
+.header__summary {
     font-size: 14px;
     color: rgb(105, 104, 104);
 }
 
-.header__sumarize::before {
+.header__summary::before {
     content: '📓';
     margin-right: 2px;
 }
@@ -84,16 +85,56 @@ html, body {
     transform: scaleY(.1);
     transition: transform .1s ease-in-out;
     transform-origin: bottom;
-    background-color: rgb(68, 68, 68);
+    background-color: #dbe6ff;
     z-index: -1;  
 }
 
 .sumarize__link:hover,
 .sumarize__link:hover::after {
     transform: scaleY(1);
-    color: white;
 }
 
 .post:not(:last-child) {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+}
+
+.post__title {
+    font-size: 26px;
+    font-weight: 700;
+}
+
+.post__title::before {
+    content: '📄';
+    font-size: 22px;
+}
+
+.post__date {
+    font-size: 14px;
+    color: rgb(105, 104, 104);
+    margin-bottom: 8px;
+}
+
+.post__btn {
+    margin-top: 10px;
+    padding: 10px 0;
+}
+
+.post__link {
+    width: 100%;
+    height: 100%;
+    color: inherit;
+    font-size: 14px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    letter-spacing: .5px;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #eeecec;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.post__link:hover {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
