--- a/css/index.css
+++ b/css/index.css
@@ -1,105 +1,12 @@
-*, *:before, *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html, body {
-    color: rgb(55, 53, 47);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
-    width: 1000px;
-    margin: 0 auto;
-}
-
-.header {
-    width: 100%;
-    margin: 15px 0 45px 0;
-    position: relative;
-}
-
-.header::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 100%;
-    height: 1px;
-    background-color: rgb(184, 179, 179);
-}
-
-.header__title {
-    display: inline-block;
-    font-size: 40px;
-    font-weight: bold;
-    letter-spacing: .5px;
-    position: relative;
-}
-
-.header__title::after {
-    content: '';
-    position: absolute;
-    left: -0.1px;
-    right: -0.1px;
-    bottom: 2px;
-    height: 100%;
-    transform: scaleY(0);
-    transition: transform .1s ease-in-out;
-    transform-origin: bottom;
-    background-color: #e5edff;
-    z-index: -1;
-}
-
-.header__title:hover::after,
-.header__title:hover .header__link {
-    transform: scaleY(.25);
-}
-
-.header__link {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header__summary {
-    font-size: 14px;
-    color: rgb(105, 104, 104);
-}
-
-.header__summary::before {
-    content: '📓';
-    margin-right: 2px;
-}
-
-.sumarize__link {
-    text-decoration: none;
-    color: inherit;
-    position: relative;
-}
-
-.sumarize__link::after {
-    content: '';
-    position: absolute;
-    left: -0.1px;
-    right: -0.1px;
-    bottom: 0px;
-    height: 100%;
-    transform: scaleY(.1);
-    transition: transform .1s ease-in-out;
-    transform-origin: bottom;
-    background-color: #dbe6ff;
-    z-index: -1;  
-}
-
-.sumarize__link:hover,
-.sumarize__link:hover::after {
-    transform: scaleY(1);
-}
+@import 'base/reset.css';
+@import 'base/typography.css';
+@import 'layout/header.css';
 
 .post:not(:last-child) {
     margin-bottom: 20px;
 }
 
 .post__title {
-    font-size: 26px;
     font-weight: 700;
 }
 
