--- a/css/install.css
+++ b/css/install.css
@@ -1,5 +1,6 @@
 @import 'base/reset.css';
 @import 'base/typography.css';
+@import 'components/button.css';
 
 body, html {
     height: 100vh;
@@ -39,51 +40,9 @@ body, html {
 .install__btn {
     font-family: inherit;
     font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     border: none;
     background-color: transparent;
     width: 300px;
-    padding: 12px 24px;
-    position: relative;
-    color: hsl(243, 80%, 62%);
-    cursor: pointer;
-}
-
-.install__btn span {
-    position: relative;
-    z-index: 1;
-}
-
-.install__btn::before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 5px;
-    right: 5px;
-    background-color: hsl(222, 100%, 95%);
-    transition: transform .2s ease-in-out;
-}
-
-.install__btn::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border: 1px solid #474E51;
-    transition: transform .2s ease-in-out;
-}
-
-.install__btn:hover::before {
-    transform: translate(6px, -4px);
-}
-
-.install__btn:hover::after {
-    transform: translate(-6px, 4px);
 }
 
 .error {
@@ -102,6 +61,17 @@ body, html {
 .error__title {
     letter-spacing: .5px;
     margin-bottom: 5px;
+}
+
+.error__message {
+    margin-bottom: 15px;
+}
+
+.error__link {
+    display: block;
+    width: 200px;
+    text-decoration: none;
+    text-align: center;
 }
 
 @keyframes bounce {
