--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,13 @@
 @import 'base/reset.css';
 @import 'base/typography.css';
 @import 'layout/header.css';
+@import 'components/button.css';
+
+.post {
+    padding: 15px;
+    border: 1px solid #e1e4e8;
+    border-radius: 6px;
+}
 
 .post:not(:last-child) {
     margin-bottom: 20px;
@@ -11,7 +18,7 @@
 }
 
 .post__title::before {
-    content: '📄';
+    content: '📝';
     font-size: 22px;
 }
 
@@ -21,27 +28,13 @@
     margin-bottom: 8px;
 }
 
-.post__btn {
-    margin-top: 10px;
-    padding: 10px 0;
+.post__summary {
+    margin-bottom: 15px;
 }
 
 .post__link {
-    width: 100%;
-    height: 100%;
-    color: inherit;
-    font-size: 14px;
-    text-transform: uppercase;
+    display: block;
+    width: 200px;
     text-decoration: none;
     text-align: center;
-    letter-spacing: .5px;
-    font-weight: 600;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #eeecec;
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-.post__link:hover {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
