--- a/css/install.css
+++ b/css/install.css
@@ -11,7 +11,6 @@ body, html {
 }
 
 .install__title {
-    letter-spacing: .5px;
     margin-bottom: 35px;
 }
 
@@ -45,6 +44,7 @@ body, html {
     width: 300px;
 }
 
+.success,
 .error {
     display: flex;
     padding: 25px;
@@ -52,14 +52,15 @@ body, html {
     background-color: rgba(235, 236, 237, 0.3);
 }
 
+.success__icon,
 .error__icon {
     font-size: 18px;
     padding-top: 4px;
     margin-right: 15px;
 }
 
+.success__title,
 .error__title {
-    letter-spacing: .5px;
     margin-bottom: 5px;
 }
 
@@ -72,6 +73,48 @@ body, html {
     width: 200px;
     text-decoration: none;
     text-align: center;
+}
+
+.success__list {
+    list-style: none;
+    margin-bottom: 10px;
+}
+
+.success__item {
+    margin-bottom: 5px;
+}
+
+.success__highlight {
+    font-size: 85%;
+    color: hsl(243, 80%, 62%);
+    background-color: hsl(222, 100%, 95%);
+    padding: 2px 5px;
+    border-radius: 5px;
+}
+
+.success__link {
+    text-decoration: none;
+    color: inherit;
+    position: relative;
+}
+
+.success__link::after {
+    content: '';
+    position: absolute;
+    left: -0.1px;
+    right: -0.1px;
+    bottom: 0px;
+    height: 100%;
+    transform: scaleY(.1);
+    transition: transform .1s ease-in-out;
+    transform-origin: bottom;
+    background-color: #dbe6ff;
+    z-index: -1;
+}
+
+.success__link:hover,
+.success__link:hover::after {
+    transform: scaleY(1);
 }
 
 @keyframes bounce {
