--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -11,7 +11,7 @@
     bottom: -5px;
     width: 100%;
     height: 1px;
-    background-color: rgb(184, 179, 179);
+    background-color: #e1e4e8;
 }
 
 .header__title {
@@ -72,7 +72,7 @@
     transition: transform .1s ease-in-out;
     transform-origin: bottom;
     background-color: #dbe6ff;
-    z-index: -1;  
+    z-index: -1;
 }
 
 .summary__link:hover,
