--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,11 @@
 @import 'base/typography.css';
 @import 'layout/header.css';
 @import 'components/button.css';
+@import 'components/alert.css';
+
+.alert {
+    margin-bottom: 45px;
+}
 
 .post {
     padding: 15px;
